[gd_scene load_steps=10 format=2]

[ext_resource path="res://scenes/GameUI/Inventory/Inventory.gd" type="Script" id=1]
[ext_resource path="res://scenes/GameUI/Inventory/ItemPickupMessage/ItemPickupMessage.tscn" type="PackedScene" id=2]
[ext_resource path="res://shared/audio/fx/click3.wav" type="AudioStream" id=3]
[ext_resource path="res://shared/fonts/OpenSans_NormalText.tres" type="DynamicFont" id=4]
[ext_resource path="res://scenes/GameUI/Inventory/utensils-solid.svg" type="Texture" id=5]
[ext_resource path="res://scenes/GameUI/Inventory/shield-alt-solid.svg" type="Texture" id=6]
[ext_resource path="res://scenes/GameUI/Inventory/sketch-brands.svg" type="Texture" id=7]
[ext_resource path="res://scenes/GameUI/close-24px.svg" type="Texture" id=8]
[ext_resource path="res://scenes/GameUI/Inventory/InventoryItem.tscn" type="PackedScene" id=9]

[node name="Inventory" type="Control"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -640.0
margin_top = -360.0
margin_right = 640.0
margin_bottom = 360.0
size_flags_horizontal = 7
size_flags_vertical = 7
script = ExtResource( 1 )

[node name="ItemPickupMessage" parent="." instance=ExtResource( 2 )]
visible = false
margin_top = 49.0
margin_bottom = 94.0

[node name="AudioClick" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -2.58472
margin_right = -2.58472
size_flags_horizontal = 7
size_flags_vertical = 7
custom_constants/margin_right = 50
custom_constants/margin_top = 50
custom_constants/margin_left = 50
custom_constants/margin_bottom = 50
__meta__ = {
"_edit_use_anchors_": false
}

[node name="InventoryPanel" type="PanelContainer" parent="MarginContainer"]
margin_left = 50.0
margin_top = 50.0
margin_right = 1230.0
margin_bottom = 670.0
size_flags_horizontal = 7
size_flags_vertical = 7

[node name="HContainer" type="HBoxContainer" parent="MarginContainer/InventoryPanel"]
margin_left = 7.0
margin_top = 7.0
margin_right = 1173.0
margin_bottom = 613.0

[node name="Spacer1" type="Control" parent="MarginContainer/InventoryPanel/HContainer"]
margin_right = 5.0
margin_bottom = 606.0
rect_min_size = Vector2( 5, 0 )

[node name="Categories" type="VBoxContainer" parent="MarginContainer/InventoryPanel/HContainer"]
margin_left = 9.0
margin_right = 95.0
margin_bottom = 606.0
custom_constants/separation = 10

[node name="InventoryMode" type="Button" parent="MarginContainer/InventoryPanel/HContainer/Categories"]
margin_right = 86.0
margin_bottom = 50.0
rect_min_size = Vector2( 0, 50 )
custom_fonts/font = ExtResource( 4 )
disabled = true
text = "Inventory"

[node name="EquipMode" type="Button" parent="MarginContainer/InventoryPanel/HContainer/Categories"]
margin_top = 60.0
margin_right = 86.0
margin_bottom = 110.0
rect_min_size = Vector2( 0, 50 )
custom_fonts/font = ExtResource( 4 )
text = "Equipment"

[node name="Spacer2" type="Control" parent="MarginContainer/InventoryPanel/HContainer"]
margin_left = 99.0
margin_right = 104.0
margin_bottom = 606.0
rect_min_size = Vector2( 5, 0 )

[node name="MainContent" type="VBoxContainer" parent="MarginContainer/InventoryPanel/HContainer"]
margin_left = 108.0
margin_right = 1166.0
margin_bottom = 606.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Header" type="HBoxContainer" parent="MarginContainer/InventoryPanel/HContainer/MainContent"]
margin_right = 1058.0
margin_bottom = 26.0

[node name="UsableFilter" type="TextureButton" parent="MarginContainer/InventoryPanel/HContainer/MainContent/Header"]
margin_right = 24.0
margin_bottom = 26.0
rect_min_size = Vector2( 24, 24 )
focus_mode = 1
enabled_focus_mode = 1
texture_normal = ExtResource( 5 )
expand = true
stretch_mode = 5

[node name="EquipFilter" type="TextureButton" parent="MarginContainer/InventoryPanel/HContainer/MainContent/Header"]
margin_left = 28.0
margin_right = 52.0
margin_bottom = 26.0
rect_min_size = Vector2( 24, 24 )
focus_mode = 1
enabled_focus_mode = 1
texture_normal = ExtResource( 6 )
expand = true
stretch_mode = 5

[node name="EtcFilter" type="TextureButton" parent="MarginContainer/InventoryPanel/HContainer/MainContent/Header"]
margin_left = 56.0
margin_right = 80.0
margin_bottom = 26.0
rect_min_size = Vector2( 24, 24 )
texture_normal = ExtResource( 7 )
texture_focused = ExtResource( 7 )
expand = true
stretch_mode = 5

[node name="SearchEdit" type="LineEdit" parent="MarginContainer/InventoryPanel/HContainer/MainContent/Header"]
margin_left = 84.0
margin_right = 484.0
margin_bottom = 26.0
rect_min_size = Vector2( 400, 0 )
placeholder_text = "Search"

[node name="ClearSearch" type="Button" parent="MarginContainer/InventoryPanel/HContainer/MainContent/Header"]
margin_left = 488.0
margin_right = 535.0
margin_bottom = 26.0
custom_fonts/font = ExtResource( 4 )
disabled = true
text = "Clear"

[node name="MarginItemCount" type="MarginContainer" parent="MarginContainer/InventoryPanel/HContainer/MainContent/Header"]
margin_left = 539.0
margin_right = 677.0
margin_bottom = 26.0
custom_constants/margin_right = 20
custom_constants/margin_left = 20
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ItemCount" type="Label" parent="MarginContainer/InventoryPanel/HContainer/MainContent/Header/MarginItemCount"]
margin_left = 20.0
margin_top = 3.0
margin_right = 118.0
margin_bottom = 23.0
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 4 )
text = "Items: 12 / 300"

[node name="Weight" type="Label" parent="MarginContainer/InventoryPanel/HContainer/MainContent/Header"]
margin_left = 681.0
margin_top = 3.0
margin_right = 819.0
margin_bottom = 23.0
custom_fonts/font = ExtResource( 4 )
text = "Weight: 12 kg / 45 kg"

[node name="Close" type="TextureButton" parent="MarginContainer/InventoryPanel/HContainer/MainContent/Header"]
margin_left = 1034.0
margin_right = 1058.0
margin_bottom = 26.0
rect_min_size = Vector2( 24, 0 )
size_flags_horizontal = 10
texture_normal = ExtResource( 8 )
expand = true

[node name="Content" type="HBoxContainer" parent="MarginContainer/InventoryPanel/HContainer/MainContent"]
margin_top = 30.0
margin_right = 1058.0
margin_bottom = 606.0
size_flags_vertical = 3

[node name="Panel" type="Panel" parent="MarginContainer/InventoryPanel/HContainer/MainContent/Content"]
margin_right = 1058.0
margin_bottom = 576.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Margin" type="MarginContainer" parent="MarginContainer/InventoryPanel/HContainer/MainContent/Content/Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/margin_right = 5
custom_constants/margin_top = 5
custom_constants/margin_left = 5
custom_constants/margin_bottom = 5

[node name="ScrollContainer" type="ScrollContainer" parent="MarginContainer/InventoryPanel/HContainer/MainContent/Content/Panel/Margin"]
margin_left = 5.0
margin_top = 5.0
margin_right = 1053.0
margin_bottom = 571.0
scroll_horizontal_enabled = false

[node name="ItemGrid" type="GridContainer" parent="MarginContainer/InventoryPanel/HContainer/MainContent/Content/Panel/Margin/ScrollContainer"]
margin_right = 40.0
margin_bottom = 40.0
custom_constants/vseparation = 10
custom_constants/hseparation = 10
columns = 15

[node name="Item" parent="MarginContainer/InventoryPanel/HContainer/MainContent/Content/Panel/Margin/ScrollContainer/ItemGrid" instance=ExtResource( 9 )]

[node name="Module" type="Panel" parent="MarginContainer/InventoryPanel/HContainer/MainContent/Content"]
visible = false
margin_left = 758.0
margin_right = 1058.0
margin_bottom = 576.0
rect_min_size = Vector2( 300, 0 )
[connection signal="mouse_entered" from="." to="." method="_on_Inventory_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_Inventory_mouse_exited"]
[connection signal="pressed" from="MarginContainer/InventoryPanel/HContainer/Categories/InventoryMode" to="." method="_on_InventoryMode_pressed"]
[connection signal="pressed" from="MarginContainer/InventoryPanel/HContainer/Categories/EquipMode" to="." method="_on_EquipMode_pressed"]
[connection signal="text_changed" from="MarginContainer/InventoryPanel/HContainer/MainContent/Header/SearchEdit" to="." method="_on_SearchEdit_text_changed"]
[connection signal="pressed" from="MarginContainer/InventoryPanel/HContainer/MainContent/Header/ClearSearch" to="." method="_on_ClearSearch_pressed"]
[connection signal="pressed" from="MarginContainer/InventoryPanel/HContainer/MainContent/Header/Close" to="." method="_on_Close_pressed"]
